<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_blue_gradient_linear">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/dusk_till_dawn_zayn_ft_sia"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/edm"
        android:textColor="#BFBFBF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_time_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_music"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_max_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/final_time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_music"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/img_music"
        android:layout_width="317dp"
        android:layout_height="325dp"
        android:contentDescription="@string/uigvlhk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        app:srcCompat="@drawable/blue_pink_music_circle" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_arrow_down_white"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="70dp"
        android:layout_height="72dp"
        android:background="@drawable/ic_play_button_circled"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_music"
        app:layout_constraintVertical_bias="0.439" />

    <ImageButton
        android:id="@+id/btn_pause"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/ic_pause_button"
        android:contentDescription="@string/app_name"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_music"
        app:layout_constraintVertical_bias="0.439" />

    <ImageButton
        android:id="@+id/btn_repeat"
        android:layout_width="34dp"
        android:layout_height="33dp"
        android:background="@drawable/ic_repeat_btn"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_music"
        app:layout_constraintVertical_bias="0.435"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="34dp"
        android:layout_height="33dp"
        android:background="@drawable/ic_next_btn"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_music"
        app:layout_constraintVertical_bias="0.437"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_forward"
        android:layout_width="34dp"
        android:layout_height="33dp"
        android:background="@drawable/ic_forward_btn"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_music"
        app:layout_constraintVertical_bias="0.437"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_shuffle"
        android:layout_width="34dp"
        android:layout_height="33dp"
        android:background="@drawable/ic_shuffle_btn"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_music"
        app:layout_constraintVertical_bias="0.437"
        tools:ignore="TouchTargetSizeCheck" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="350dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_music"
        app:layout_constraintVertical_bias="0.677" />



</androidx.constraintlayout.widget.ConstraintLayout>

